--- a/MU106/Main.storyboard
+++ b/MU106/Main.storyboard
@@ -33,7 +33,7 @@
                                             <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                                             <nil key="highlightedColor"/>
                                         </label>
-                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="star_inactive" highlightedImage="star_active" translatesAutoresizingMaskIntoConstraints="NO" id="oxL-3R-4o9">
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="oxL-3R-4o9">
                                             <rect key="frame" x="264" y="8" width="36" height="36"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         </imageView>
@@ -75,10 +75,6 @@
             <point key="canvasLocation" x="132" y="52"/>
         </scene>
     </scenes>
-    <resources>
-        <image name="star_active" width="18" height="18"/>
-        <image name="star_inactive" width="18" height="18"/>
-    </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
