--- a/MU106/Main.storyboard
+++ b/MU106/Main.storyboard
@@ -57,7 +57,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="byU-Z6-AxX" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="41" y="-126"/>
+            <point key="canvasLocation" x="99" y="-264"/>
         </scene>
         <!--Side Panel Controller-->
         <scene sceneID="VDP-mQ-VSB">
@@ -75,47 +75,76 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x8H-cV-bta" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="41" y="586"/>
+            <point key="canvasLocation" x="71" y="506"/>
         </scene>
-        <!--Table View Controller - Root View Controller-->
-        <scene sceneID="WeW-pi-Tk4">
-            <objects>
-                <tableViewController id="dFV-jl-pfR" sceneMemberID="viewController">
-                    <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" id="qPF-b0-2KU">
-                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <prototypes>
-                            <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="lAq-v0-wtt">
-                                <rect key="frame" x="0.0" y="86" width="320" height="44"/>
-                                <autoresizingMask key="autoresizingMask"/>
-                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="lAq-v0-wtt" id="DFo-Hc-wDh">
-                                    <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
-                                    <autoresizingMask key="autoresizingMask"/>
-                                </tableViewCellContentView>
-                            </tableViewCell>
-                        </prototypes>
-                    </tableView>
-                    <navigationItem key="navigationItem" title="Root View Controller" id="HW9-xo-REZ"/>
-                </tableViewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="XoA-LB-XGa" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="1170" y="323"/>
-        </scene>
-        <!--Center Controller-->
+        <!--Navigation Controller-->
         <scene sceneID="eGg-rh-W3m">
             <objects>
-                <navigationController storyboardIdentifier="CenterID" definesPresentationContext="YES" id="h7m-lD-XFC" customClass="CenterController" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="CenterID" definesPresentationContext="YES" id="h7m-lD-XFC" sceneMemberID="viewController">
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="Y7j-hp-aNd">
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="dFV-jl-pfR" kind="relationship" relationship="rootViewController" id="peR-UJ-i5V"/>
+                        <segue destination="va9-I4-k9P" kind="relationship" relationship="rootViewController" id="Uu9-J7-4CK"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="f94-3m-CCc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="668" y="417"/>
+            <point key="canvasLocation" x="496" y="506"/>
+        </scene>
+        <!--View Controller - Favorites-->
+        <scene sceneID="jzW-bY-P3N">
+            <objects>
+                <viewController id="Tch-3y-dNC" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="Sk1-By-KTp"/>
+                        <viewControllerLayoutGuide type="bottom" id="ceO-aG-xgB"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="VRN-Tr-klh">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" title="Favorites" id="HDN-jr-ppi"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="COU-NY-CGR" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="954" y="-248"/>
+        </scene>
+        <!--Center Controller-->
+        <scene sceneID="aGa-Id-vJx">
+            <objects>
+                <viewController id="va9-I4-k9P" customClass="CenterController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="eRh-wl-Cgz"/>
+                        <viewControllerLayoutGuide type="bottom" id="w7s-Kc-uka"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="K3j-Mw-3l5">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                        <subviews>
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Карта" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vv8-8R-v3F">
+                                <rect key="frame" x="133" y="273" width="54" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="lxY-Ik-ehO">
+                        <barButtonItem key="rightBarButtonItem" systemItem="bookmarks" id="G43-WZ-jw1">
+                            <connections>
+                                <action selector="viewFavorites:" destination="va9-I4-k9P" id="d6L-YF-JwR"/>
+                                <segue destination="Tch-3y-dNC" kind="push" id="YCN-xn-hKJ"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="L8s-K8-60N" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="956" y="506"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="UTz-aV-Hs6">
